<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8d8d8">

    <include
        android:id="@+id/checkout_appbar"
        layout="@layout/actionbar_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/checkout_scroll"
        android:src="@drawable/shadow_bottom" />

    <ScrollView
        android:id="@+id/checkout_scroll"
        android:layout_below="@+id/checkout_appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="55dp"

        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom|left"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:background="@drawable/appbar_green"
                android:text="@string/personal_details"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="normal" />


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#FFF"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:gravity="top"
                android:paddingTop="5dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center|right"
                        android:text="@string/name"
                        android:textColor="#686868"
                        android:textSize="12sp"
                        android:textStyle="bold"

                        />


                    <EditText
                        android:id="@+id/checkout_name"
                        android:hint="@string/name_example"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:paddingRight="15dp"
                        android:background="@android:color/transparent"
                        android:inputType="textCapSentences"
                        android:paddingLeft="15dp"
                        android:selectAllOnFocus="true"
                        android:textAllCaps="true"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </LinearLayout>


                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:layout_marginLeft="15dp"-->
                    <!--android:layout_marginRight="15dp"-->
                    <!--android:background="#AAAAAA" />-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_marginBottom="4dp"-->
                    <!--android:orientation="horizontal">-->

                    <!--<TextView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_alignParentTop="true"-->
                        <!--android:layout_weight="3"-->
                        <!--android:gravity="center|right"-->
                        <!--android:text="@string/surname"-->
                        <!--android:textColor="#686868"-->
                        <!--android:textSize="12sp"-->
                        <!--android:textStyle="bold"-->

                        <!--/>-->


                    <!--<EditText-->
                        <!--android:id="@+id/checkout_family_name"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:paddingRight="15dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_weight="5"-->
                        <!--android:background="@android:color/transparent"-->
                        <!--android:hint="@string/family_name_example"-->
                        <!--android:inputType="textCapSentences"-->
                        <!--android:paddingLeft="15dp"-->
                        <!--android:selectAllOnFocus="true"-->
                        <!--android:gravity="left|center"-->
                        <!--android:textAllCaps="true"-->
                        <!--android:textSize="13sp"-->
                        <!--android:textStyle="normal" />-->
                <!--</LinearLayout>-->


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#AAAAAA" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:gravity="center|right"
                        android:text="@string/phone"
                        android:textColor="#686868"
                        android:textSize="12sp"
                        android:textStyle="bold"

                        />
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="5"
    android:orientation="horizontal"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:text="+994 "
        android:gravity="center|left"
        android:paddingLeft="15dp"
        android:textSize="12sp"
        android:textColor="#686868"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:id="@+id/checkout_mobile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="15dp"
        android:background="@android:color/transparent"
        android:hint="e.g 124777449"
        android:inputType="phone"
        android:paddingLeft="2dp"
        android:selectAllOnFocus="true"
        android:gravity="left|center"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="normal" />



    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#AAAAAA" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center|right"
                        android:text="@string/additional_notes"
                        android:textColor="#686868"
                        android:textSize="12sp"
                        android:textStyle="bold"

                        />


                    <EditText
                        android:id="@+id/checkout_notes"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@android:color/transparent"
                        android:gravity="center|left"
                        android:hint="@string/notes_example"
                        android:inputType="textCapSentences|textMultiLine"
                        android:lines="3"
                        android:maxLines="3"
                        android:paddingRight="15dp"
                        android:minLines="1"
                        android:paddingLeft="15dp"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:src="@drawable/shadow_bottom" />



         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/delivery_address"
             android:visibility="visible"
             >

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="bottom|left"
                 android:paddingBottom="5dp"
                 android:paddingLeft="15dp"
                 android:background="@drawable/appbar_green"
                 android:text="@string/address_details"
                 android:textAllCaps="false"
                 android:textColor="#FFF"
                 android:textSize="18sp"
                 android:textStyle="normal" />

             <LinearLayout

                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
                 android:background="#FFF"
                 android:orientation="vertical"
                 android:paddingBottom="5dp"
                 android:paddingTop="5dp">


                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="4dp"
                     android:orientation="horizontal">

                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
                         android:gravity="center|right"
                         android:text="@string/zone"
                         android:textColor="#686868"
                         android:textSize="12sp"
                         android:textStyle="bold"

                         />

                     <EditText
                         android:id="@+id/checkout_zone"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="5"
                         android:background="@android:color/transparent"
                         android:hint="@string/street_example"
                         android:inputType="textCapSentences"
                         android:paddingLeft="15dp"
                         android:textColor="#686868"
                         android:paddingRight="15dp"
                         android:selectAllOnFocus="true"
                         android:textAllCaps="true"
                         android:textSize="13sp"
                         android:textStyle="bold" />


                 </LinearLayout>

                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:background="#AAAAAA" />

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="4dp"
                     android:orientation="horizontal">

                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="3"
                         android:gravity="center|right"
                         android:text="@string/street"
                         android:textColor="#686868"
                         android:textSize="12sp"
                         android:textStyle="bold"

                         />


                     <EditText
                         android:id="@+id/checkout_street"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="5"
                         android:background="@android:color/transparent"
                         android:hint="@string/street_example"
                         android:inputType="textCapSentences"
                         android:paddingLeft="15dp"
                         android:textColor="#686868"
                         android:paddingRight="15dp"
                         android:selectAllOnFocus="true"
                         android:textAllCaps="true"
                         android:textSize="13sp"
                         android:textStyle="bold" />
                 </LinearLayout>

                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:background="#AAAAAA" />

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="4dp"
                     android:orientation="horizontal">

                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_weight="3"
                         android:gravity="center|right"
                         android:text="@string/apartment"
                         android:textColor="#686868"
                         android:textSize="12sp"
                         android:textStyle="bold"

                         />

                     <EditText
                         android:id="@+id/checkout_apt"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="5"
                         android:background="@android:color/transparent"
                         android:hint="@string/apt_example"
                         android:inputType="textCapSentences"
                         android:paddingLeft="15dp"
                         android:gravity="center|left"
                         android:textColor="#686868"
                         android:paddingRight="15dp"
                         android:selectAllOnFocus="true"
                         android:textAllCaps="true"
                         android:textSize="13sp"
                         android:textStyle="bold" />

                 </LinearLayout>


                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:background="#AAAAAA" />

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginBottom="4dp"
                     android:orientation="horizontal">

                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_weight="3"
                         android:gravity="center|right"
                         android:text="@string/postal"
                         android:textColor="#686868"
                         android:textSize="12sp"
                         android:textStyle="bold"

                         />


                     <EditText
                         android:id="@+id/checkout_postcode"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="5"
                         android:background="@android:color/transparent"
                         android:hint="@string/postcode_example"
                         android:inputType="textCapSentences"
                         android:paddingLeft="15dp"
                         android:paddingRight="15dp"
                         android:selectAllOnFocus="true"
                         android:textAllCaps="true"
                         android:textSize="13sp"
                         android:textStyle="normal" />
                 </LinearLayout>

             </LinearLayout>


             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="15dp"
                 android:src="@drawable/shadow_bottom" />
             </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/checkout_place_order"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_above="@+id/button_place_shadow"
        android:layout_marginRight="5dp"
        android:background="@drawable/red_button_selector"
        android:padding="10dp"
        android:text="@string/place_order"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/button_place_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/shadow_bottom" />

</RelativeLayout>